--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 紫微宸居
-subtitle: 商伯阳 's Blog -- What I do that defines me.
+subtitle: What I do that defines me.
 description: 商伯阳，紫微宸居，技术艺术，思想文学，个人博客
 author: 商伯阳
 language: zh-CN
