--- a/_config.yml
+++ b/_config.yml
@@ -165,5 +165,5 @@ stylus:
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/shangboyang/shangboyang.github.io.git
+  repository: https://shangboyang@github.com/shangboyang/shangboyang.github.io.git
   branch: master        
