--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social_links:
   #google_plus:
   weibo: http://weibo.com/shangboyang/
   github: https://github.com/shangboyang/
-  rss:
+  #rss:
 widgets:
 - recent_posts
 - category
@@ -133,7 +133,7 @@ time_format: HH:mm:ss
 # Pagination
 ## Set per_page to 0 to disable pagination
 ## 每页10篇文章
-per_page: 10 
+per_page: 10
 pagination_dir: page
 
 # Extensions
@@ -171,4 +171,4 @@ stylus:
 deploy:
   type: git
   repository: https://github.com/shangboyang/shangboyang.github.io.git
-  branch: master        
+  branch: master
